# Namada-SDK

./: Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json
examples/balancefetch/: balance.rs  shieldedbalance.rs
examples/createwallet/: createwallet.rs
examples/generateaddress/: generatespendingkey.rs  paymentaddress.rs  printaddress.rs
examples/ibc-memo/: ibc-memo.rs
examples/ibctransfer/: ibctransfer.rs
examples/importwallet/: importwallet.rs
examples/misc/: checkifrevealpk.rs
examples/shielded-sync/: sync.rs
examples/shieldedtransfer/: transparenttoshielded.rs
examples/transparent-transfer/: transparent.rs
masp-wallets/: wallet.toml
sdk-wallet/: wallet.toml
src/: README.md  bullshit.html  createwallet.html  dashboard.html  dashboards.html  haha.html  importnew.html  importwallet.html  importwalletold.html  index.html  index.jsx  inputest.html  lib.rs  main.js  main.rs  maincode.html  newpage.html  receivetoken.html  sample.html  scripts.js  sendtoken.html  settingd.html  settingnav.html  settings.html  styles.css  test.html  testing.html  testlater.html  transfertoken.html  verifyword.html  walletlist.html
src-tauri/: Cargo.toml
src-tauri/accountsection/: credentails.txt
src-tauri/masp-wallets/: wallet.toml
src-tauri/sdk-wallet/: wallet.toml
src-tauri/src/: lib.rs
src/assets/: settingnav.html
