[package]
name = "wallet-example"
version = "0.1.0"
edition = "2021"

[dependencies]
namada_core = { git = "https://github.com/anoma/namada", tag = "v0.44.1" }
namada_sdk = { git = "https://github.com/anoma/namada", tag = "v0.44.1", default-features = false, features = ["std", "async-send", "download-params"] }
namada_tx = { git = "https://github.com/anoma/namada", tag = "v0.44.1" }
namada_governance = { git = "https://github.com/anoma/namada", tag = "v0.44.1" }
namada_ibc = { git = "https://github.com/anoma/namada", tag = "v0.44.1" }
namada_token = { git = "https://github.com/anoma/namada", tag = "v0.44.1" }
namada_parameters = { git = "https://github.com/anoma/namada", tag = "v0.44.1" }
namada_proof_of_stake = { git = "https://github.com/anoma/namada", tag = "v0.44.1" }
tendermint = "0.38.0"
tendermint-config = "0.38.0"
tendermint-rpc = { version = "0.38.0", features = ["http-client"] }
tendermint-proto = "0.38.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8" 
rand_core = "0.6" 
wasm-bindgen = "0.2" 
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement"] }
toml = "0.5"
reqwest = "0.11.4"
kdam = "0.5.2"
anyhow = "1.0"
eyre = "0.6"
either = "1.6"
masp_primitives = { git = "https://github.com/anoma/masp", rev = "12ed8b060b295c06502a2ff8468e4a941cb7cca4" }